[NG] ADDING_VALIDATION_STYLES - feat: implementing styles for the inputs when invalid

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,6 +32,26 @@
   </div>
 
   @if (
+    email.touched &&
+    email.dirty &&
+    email.invalid
+  ) {
+    <p class="control-error">
+      Invalid value for email.
+    </p>
+  }
+
+  @if (
+    password.touched &&
+    password.dirty &&
+    password.invalid
+  ) {
+    <p class="control-error">
+      Invalid value for password - must be at least 6 characters long.
+    </p>
+  }
+
+  @if (
     form.form.invalid && 
     email.touched &&
     password.touched
