[NG] UPDATING_FORM_VALUES_PROGRAMATICALLY - feat: implementing the setting of form values via NgForm signal after retrieving the value from localStorage

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,8 +32,8 @@
   </div>
 
   @if (
-    email.touched &&
-    email.dirty &&
+    (email.touched ||
+    email.dirty) &&
     email.invalid
   ) {
     <p class="control-error">
@@ -42,8 +42,8 @@
   }
 
   @if (
-    password.touched &&
-    password.dirty &&
+    (password.touched ||
+    password.dirty) &&
     password.invalid
   ) {
     <p class="control-error">
